--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^6.5.1"
+    "lerna": "^6.5.1",
+    "typescript": "^4.9.5",
+    "typescript-strict-plugin": "^2.1.0"
   }
 }
