--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "devDependencies": {
     "lerna": "^6.5.1",
     "typescript": "^4.9.5",
-    "typescript-strict-plugin": "^2.1.0"
+    "typescript-strict-plugin": "^2.1.0",
+    "@types/react": "^18.0.28",
+    "react": "^18.2.0"
   }
 }
