--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,11 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useWorkspaces": true,
-  "version": "0.0.0"
+    "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+    "useWorkspaces": true,
+    "version": "independent",
+    "independent": true,
+    "command": {
+        "publish": {
+            "allowBranch": "main"
+        }
+    }
 }
