--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "react-microsha-monorepo",
   "private": true,
+  "version": "1.0.0",
   "workspaces": [
     "packages/*"
   ],
+  "repository": "https://github.com/AndreyGladkov/react-microsha.git",
   "devDependencies": {
-    "lerna": "^6.5.1",
-    "typescript": "^4.9.5",
-    "typescript-strict-plugin": "^2.1.0",
     "@types/react": "^18.0.28",
-    "react": "^18.2.0"
+    "lerna": "^6.5.1",
+    "react": "^18.2.0",
+    "typescript": "^4.9.5",
+    "typescript-strict-plugin": "^2.1.0"
   }
 }
