Add dummy input

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
++git-tag-version=true
+save-prefix="~"
 registry=https://registry.npmjs.com/
-always-auth=false
+//registry.npmjs.com/:_authToken="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"
+always-auth=true
