--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "root",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "devDependencies": {
-    "lerna": "^6.0.1"
-  }
+    "name": "root",
+    "private": true,
+    "workspaces": ["packages/*"],
+    "devDependencies": {
+        "lerna": "^6.0.1",
+        "@types/react": "^18.0.28",
+        "react": "^18.2.0"
+    }
 }
