--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -5,5 +5,6 @@
     "scripts": {},
     "peerDependencies": {
         "react": "^18.2.0"
-    }
+    },
+    "gitHead": "290b9d2ed0bbff656668bc1985bf89a0c0e9cec0"
 }
